--- a/prop/pdfstyle.css
+++ b/prop/pdfstyle.css
@@ -1,74 +1,79 @@
-#adobe-dc-view{
-    top:0px;
-    left:0px;
-    position: fixed;
-    width:100%;
-    height:100%;
-    z-index:1000;
+#adobe-dc-view {
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 }
-#nocontent{
-    top:0px;
-    left:0px;
-    position: fixed;
-    width:100%;
-    height:100%;
-    background-color: #e0e0e0;
-    z-index:100;
-}
-
-#ntloded{
-    margin-top:200px;
-    width:100%;
-    max-width:300px;
-    pointer-events: none;
-    padding:5px;
-}
-#objfrm{
-    top:0px;
-    left:0px;
-    position: fixed;
-    width:100%;
-    height:100%;
-}
-#objcont{
-    display: none;
-    top:0px;
-    left:0px;
-    position: fixed;
-    width:100%;
-    height:100%;
-    z-index:1000;
-}
-#crtpdflk{
-    bottom:0px;
-    right:0px;
-    position: fixed;
-    z-index: 1000;
+#nocontent {
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #e0e0e0;
+  z-index: 100;
 }
 
-#formContainer{
-    bottom:0px;
-    right:0px;
-    position: fixed;
-    z-index: 1000;
-    width:100%;
-    max-width: 450px;
-    z-index: 2000;
-    background-color: white;;
+#ntloded {
+  margin-top: 200px;
+  width: 100%;
+  max-width: 300px;
+  pointer-events: none;
+  padding: 5px;
 }
-#formContainer input{
-    padding:10px;
-    margin:5px;
-    width:42%;
-    display: inline-block;
+#objfrm {
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
-#formContainer button{
-    padding:10px;
-    margin:5px;
-    width:47%;
+#objcont {
+  display: none;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 }
-#resltlk{
-    background-color: #fe3535;
-    color:white;
-    border:2px solid rgb(0, 0, 0);
+#crtpdflk {
+  bottom: 0px;
+  right: 5px;
+  position: fixed;
+  z-index: 1000;
+  border: none;
+  background-color: #e0e0e0;
+  padding: 5px;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+#formContainer {
+  bottom: 0px;
+  right: 0px;
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  max-width: 450px;
+  z-index: 2000;
+  background-color: #e0e0e0;
+}
+#formContainer input {
+  padding: 10px;
+  margin: 5px;
+  width: 42%;
+  display: inline-block;
+}
+#formContainer button {
+  padding: 10px;
+  margin: 5px;
+  width: 47%;
+}
+#resltlk {
+  background-color: #fe3535;
+  color: white;
+  border: 2px solid rgb(0, 0, 0);
 }
