--- a/audios/style.css
+++ b/audios/style.css
@@ -35,11 +35,11 @@ body {
 }
 
 .track-name {
-  font-size: 2.25rem;
+  font-size: calc(2.25vw + 1rem);
 }
 
 .track-artist {
-  font-size: 1.25rem;
+  font-size: calc(1.25vw + 0.5rem);
 }
 
 .buttons {
