--- a/css/style.2.css
+++ b/css/style.2.css
@@ -253,7 +253,7 @@ h3 a:hover {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 200px;
+  height: 240px;
   margin-bottom: 20px;
   display: block;
 }
@@ -262,7 +262,7 @@ h3 a:hover {
   position: relative;
   overflow: hidden;
   width: 100%;
-  min-height: 200px;
+  min-height: 240px;
   margin-bottom: 20px;
 }
 
@@ -618,4 +618,16 @@ h3 a:hover {
 }
 #clsrecrdap:hover {
   opacity: 0.7;
+}
+
+.dwrldicn a {
+  background-color: #dadadab4;
+  padding: 4px 10px;
+  text-decoration: none;
+  border-radius: 4px;
+  color: #454545;
+  margin-right: 2px;
+}
+.dwrldicn a:hover {
+  background-color: #dadada80;
 }
