--- a/css/style.2.css
+++ b/css/style.2.css
@@ -424,7 +424,7 @@ h3 a:hover {
   text-decoration: none;
 }
 .modalcn-content a:hover {
-  opacity: 0.5;
+  opacity: 0.8;
   z-index: 0;
 }
 .closepst {
@@ -452,6 +452,21 @@ h3 a:hover {
   font-size: 16px;
   z-index: 1;
 }
+/* Define the keyframes for the spin animation */
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* Apply the spin animation to the element with the class .fa-sync-alt */
+.loading-spin {
+  animation: spin 2s linear infinite;
+}
+
 #fetchpsty {
   padding: 10px;
   margin-bottom: 20px;
