--- a/dquote-e/css/tooplate-style.css
+++ b/dquote-e/css/tooplate-style.css
@@ -5,28 +5,32 @@ Template 2100 Artist
 
 */
 
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700|Playfair+Display');
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700|Playfair+Display");
 
 body {
-    background: #f4f4f4;
-    font-family: 'Nunito Sans', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    overflow-x: hidden;
+  background: #f4f4f4;
+  font-family: "Nunito Sans", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  overflow-x: hidden;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
-
-
 
 /*---------------------------------------
   Typorgraphy              
 -----------------------------------------*/
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-style: normal;
   font-weight: 300;
   letter-spacing: 0px;
@@ -34,7 +38,7 @@ h1,h2,h3,h4,h5,h6 {
 
 h1 {
   color: #3d3d3f;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 40px;
   line-height: normal;
 }
@@ -68,12 +72,11 @@ p {
   letter-spacing: 0.2px;
 }
 
-strong, span {
+strong,
+span {
   color: #878787;
   font-weight: normal;
 }
-
-
 
 /*---------------------------------------
   Buttons               
@@ -97,13 +100,11 @@ strong, span {
   background: #d7b065;
 }
 
-
-
 /*---------------------------------------
   General               
 -----------------------------------------*/
 
-html{
+html {
   -webkit-font-smoothing: antialiased;
 }
 
@@ -114,7 +115,9 @@ a {
   text-decoration: none !important;
 }
 
-a:hover, a:active, a:focus {
+a:hover,
+a:active,
+a:focus {
   color: #000000;
   outline: none;
 }
@@ -140,15 +143,16 @@ a:hover, a:active, a:focus {
   background-size: cover !important;
 }
 
-#about, #work,
+#about,
+#work,
 #contact {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
 }
-footer{
-  bottom:0px;
-  left:0px;
+footer {
+  bottom: 0px;
+  left: 0px;
   width: 100%;
   position: fixed;
   padding-top: 20px;
@@ -163,7 +167,7 @@ footer{
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
   z-index: 99999;
   background: none repeat scroll 0 0 #ffffff;
@@ -176,7 +180,7 @@ footer{
 }
 
 .spinner:before {
-  content: '';
+  content: "";
   box-sizing: border-box;
   /* position: absolute; */
   top: 50%;
@@ -187,24 +191,27 @@ footer{
   border-radius: 50%;
   border: 1px solid #000000;
   border-top-color: #f9f9f9;
-  animation: spinner .9s linear infinite;
+  animation: spinner 0.9s linear infinite;
 }
 
 @-webkit-@keyframes spinner {
-  to {transform: rotate(360deg);}
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes spinner {
-  to {transform: rotate(360deg);}
+  to {
+    transform: rotate(360deg);
+  }
 }
-
 
 /*---------------------------------------
   Home section              
 -----------------------------------------*/
 
 #home {
-  background: url('../images/home-bg.jpg') 50% 0 repeat-y fixed;
+  background: url("../images/home-bg.jpg") 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
   border-radius: 5px;
@@ -215,7 +222,7 @@ footer{
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-   align-items: center;
+  align-items: center;
   height: 75vh;
   text-align: center;
   position: relative;
@@ -223,10 +230,9 @@ footer{
 }
 
 .home-wrapper {
-  background: rgba(250,250,250,0.8);
+  background: rgba(250, 250, 250, 0.8);
   padding: 32px 12px;
 }
-
 
 /*---------------------------------------
   About section              
@@ -260,7 +266,6 @@ footer{
   border-radius: 5px;
   padding: 42px 32px;
 }
-
 
 /*---------------------------------------
   Work section              
@@ -328,7 +333,6 @@ footer{
   color: #ffffff;
 }
 
-
 /*---------------------------------------
   Footer section              
 -----------------------------------------*/
@@ -395,7 +399,6 @@ footer .dash-line {
   position: relative;
 }
 
-
 /*---------------------------------------
   Social icon             
 -----------------------------------------*/
@@ -440,26 +443,27 @@ footer .dash-line {
 -----------------------------------------*/
 
 @media (max-width: 980px) {
+  h1 {
+    font-size: 30px;
+  }
 
- h1 {font-size: 30px;}
+  #about .about-thumb {
+    padding-left: 0px;
+  }
 
- #about .about-thumb {
-  padding-left: 0px;
- }
-
- #work .work-thumb {
-  margin-top: 25px;
- }
-
+  #work .work-thumb {
+    margin-top: 25px;
+  }
 }
 
 @media (max-width: 768px) {
-
   h1 {
     font-size: 27px;
   }
 
-  h2 {font-size: 25px;}
+  h2 {
+    font-size: 25px;
+  }
 
   footer .col-md-4 {
     margin-bottom: 35px;
@@ -472,11 +476,9 @@ footer .dash-line {
   footer .copyright-text {
     padding-bottom: 12px;
   }
-
 }
 
 @media (max-width: 580px) {
-
   h3 {
     font-size: 14px;
     letter-spacing: 4px;
@@ -486,42 +488,66 @@ footer .dash-line {
     padding: 22px 12px;
     margin-top: 0px;
   }
-
 }
 
 @media (max-width: 360px) {
   #home {
     height: 85vh;
-  } 
-
+  }
 }
 
+.footleft {
+  bottom: 7px;
+  left: 10px;
+  position: absolute;
+  border: none;
+  cursor: pointer;
+  padding: 4px 10px;
+  background-color: #fffffff0;
+  color: black;
+}
+.footleft:hover {
+  background-color: #ffffffb4;
+}
+.footleft svg {
+  width: 30px;
+  height: 30px;
+}
 
-.footleft{
-	bottom:10px;
-	left:10px;
-	position: absolute;
-	border: none;
-	cursor: pointer;
-	padding:4px 10px;
-    background-color: #ffffff;
+#ftstcon {
+  bottom: 70px;
+  left: 10px;
+  position: fixed;
+  display: block;
+  width: 335px;
+  padding: 15px;
+  padding-bottom: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: inset -5px -5px #3e3e3e;
+  display: none;
 }
-.footleft:hover{
-background-color: #ffffffb4;
+#ftstcon a {
+  color: black;
+  font-size: 14px;
+  display: inline-block;
+  padding: 4px 10px;
+  margin: 3px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  box-shadow: inset -3px -3px #3e3e3e7a;
 }
-.footleft svg{
-width:24px;
-height:24px;
+#ftstcon a:hover {
+  transform: scale(0.9);
 }
-
-.wow h4{
+.wow h4 {
   line-height: 30px;
 }
-.work-thumb .hndwrt{
-  padding:10px;
+.work-thumb .hndwrt {
+  padding: 10px;
   border: 2px solid #555555a2;
   border-radius: 7px;
 }
-.hndtyped .col-md-6{
- white-space:unset;
+.hndtyped .col-md-6 {
+  white-space: unset;
 }
