--- a/app/audioplayer/player-tw.css
+++ b/app/audioplayer/player-tw.css
@@ -648,8 +648,8 @@ input[type="button"] {
     max-width: 100%;
   }
   #infocon {
-    margin-top: 20px;
-    max-width: 80%;
+    margin-top: 5vh;
+    max-width: 600px;
     height: 30vh !important;
   }
   .sticon svg {
