--- a/css/style.2.css
+++ b/css/style.2.css
@@ -222,6 +222,7 @@ h3 a:hover {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
   background-color: #c7c7c7;
+  position: relative;
 }
 #livfunc {
   top: 80px;
