--- a/app/audioplayer/player-tw.css
+++ b/app/audioplayer/player-tw.css
@@ -373,7 +373,7 @@ html {
   max-width: 500px;
   padding: 20px;
   border-radius: 20px;
-  min-height: 60vh;
+  /* min-height: 60vh; */
   overflow: hidden;
   background-repeat: no-repeat;
   background-blend-mode: hue;
@@ -616,7 +616,7 @@ input[type="button"] {
     background-position: 0% 50%;
   }
 }
-@media screen and (max-width: 720px) {
+@media (max-width: 720px) and (max-height: 750px) {
   .track-info {
     font-size: 15px;
   }
@@ -627,7 +627,7 @@ input[type="button"] {
   #infocon {
     margin-top: 0vh;
     max-width: 350px;
-    min-height: 60vh;
+    min-height: 50vh !important;
   }
   .sticon svg {
     top: 7.5px;
@@ -653,7 +653,7 @@ input[type="button"] {
   #infocon {
     margin-top: 5vh;
     max-width: 600px;
-    height: 30vh !important;
+    height: 60vh !important;
   }
   .sticon svg {
     top: 7.5px;
