--- a/gallery/css/templatemo-upright.css
+++ b/gallery/css/templatemo-upright.css
@@ -862,11 +862,15 @@ button:focus {
 
 #vdframe {
   width: 100%;
-  height: 500px;
+  height: 100vh;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 10px 0px grey;
 }
 
 #vdframe iframe {
   border: 0px;
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
