--- a/dquote-e/css/tooplate-style.css
+++ b/dquote-e/css/tooplate-style.css
@@ -519,10 +519,10 @@ footer .dash-line {
   left: 10px;
   position: fixed;
   display: block;
-  width: 335px;
+  width: 200px;
   padding: 15px;
   padding-bottom: 20px;
-  background-color: white;
+  background-color: #ececec;
   border-radius: 10px;
   box-shadow: inset -5px -5px #3e3e3e;
   display: none;
